Bug 377822 - libktorrent: HTTP Proxy is ignored
Summary: libktorrent: HTTP Proxy is ignored
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-20 01:17 UTC by Alexander Trufanov
Modified: 2017-04-05 01:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Trufanov 2017-03-20 01:17:57 UTC
In KTorrent 5.0 the HTTP Proxy setting is ignored due to problem in libktorrent's HTTPTracker::doAnnounce() in case of KIO transport.
I have privoxy on top of tor, both on 128.0.0.1, and I don't see any traffic to my proxy in its log. Also https://torguard.net/checkmytorrentipaddress.php displays my real ip.

It seems the problem is that you must set up "ProxyUrls" metadata and current implementation fills in only "UseProxy". Looks like KIO ignores proxy setting in this case. Perhaps it's a KIO problem. Didn't dig deeper.
Comment 1 Alexander Trufanov 2017-04-05 01:09:20 UTC
Git commit 4049602f8db96cc1c48fb07ce799139fd62b1d57 by Alexander Trufanov.
Committed on 05/04/2017 at 01:03.
Pushed by trufanov into branch 'master'.

fix HTTP Proxy usage

REVIEW:130037

M  +6    -0    src/tracker/httptracker.cpp

https://commits.kde.org/libktorrent/4049602f8db96cc1c48fb07ce799139fd62b1d57