fix HTTP Proxy usage

REVIEW:130037
BUG:377822